# zephyr-blinky-ota

./: .gitignore  Doube-Download.md  README.md  README2.md  TODO.md  build.ps1  setup_env.ps1
update-server/: ota_server.py  update_server.py
zephyr-project/: CMakeLists.txt  build.ps1  build2.ps1  ecdsa.pem  ed25519.pem  flash.ps1  peter_pan.pem  pm_static.yml  prj.conf  sysbuild.conf  west.yml
zephyr-project/app/: CMakeLists.txt  VERSION  app.overlay  build.ps1  prj.conf  sysbuild-default.conf  sysbuild-esp32s3.conf  sysbuild-esp32s3_devkitc.conf  sysbuild.cmake  sysbuild.conf
zephyr-project/app/boards/: esp32_devkitc_procpu.overlay  esp32c3_devkitc.conf  esp32c3_devkitc.overlay
zephyr-project/app/child_image/mcuboot/: proj.conf
zephyr-project/app/include/: app_config.h  blinky.h  ota_mgmt.h  utils.h  watchdog_mgmt.h  wifi_mgmt.h
zephyr-project/app/src/: blinky.c  main.c  main_.c  ota_mgmt.c  utils.c  watchdog_mgmt.c  wifi_mgmt.c
zephyr-project/app/sysbuild/: mcuboot.conf
zephyr-project/app/sysbuild/mcuboot/: app.overlay  prj.conf  prj_.conf
zephyr-project/app/sysbuild/mcuboot/boards/: esp32_devkitc_procpu.conf  esp32c3_devkitc.conf  esp32s3_devkitc_procpu.conf
zephyr-project/boards/: arduino_nano_33_iot.overlay  esp32_devkitc_esp32_procpu.overlay
zephyr-project/child_image/mcuboot/: prj.conf
zephyr-project/include/: blinky.h  ota_mgmt.h  wifi_mgmt.h
zephyr-project/keys/: README.md
zephyr-project/src/: app_config.h  blinky.c  main.c  ota_mgmt.c  wifi_mgmt.c
zephyr-project/sysbuild/: mcuboot.conf
zephyr-project/sysbuild/mcuboot/: CMakeLists.txt  prj.conf  proj.conf
zephyr-project/sysbuild/mcuboot/boards/: esp32_devktic_procpu.overlay
zephyr-project/with_mcuboot/: CMakeLists.txt  prj.conf  prjjjj.conf  sysbuild.conf
zephyr-project/with_mcuboot/boards/: esp32_devkitc_procpu.overlay
zephyr-project/with_mcuboot/include/: watchdog_mgmt.h
zephyr-project/with_mcuboot/src/: ota_mgmt.c
zephyr-project/with_mcuboot/sysbuild/: mcuboot.conf  mcuboot___.overlay
zephyr-project_old/: .gitignore  CMakeLists.txt  app.overlay  build.ps1
zephyr-project_old/boards/: esp32_devkitc_esp32_procpu.yml
zephyr-project_old/include/: blinky.h  wifi_mgmt.h
zephyr-project_old/src/: app_config.h  main.c  wifi_mgmt.c
